fix skill center alignment issue

--- a/style_final.css
+++ b/style_final.css
@@ -101,8 +101,10 @@ h5 {
 .sectionTitle {
                 font-size: 35px;
                 font-weight: bolder;
+                margin: 0 auto;
                 margin-bottom: 0;
                 margin-top: 0;
+                display: block;
                 }
 
 .divider {
@@ -110,6 +112,7 @@ h5 {
           color: #d6d6d6;
           margin-top: 40px;
           margin-bottom: 40px;
+          display: block;
           }
 
 #exp_container {
@@ -235,17 +238,20 @@ ul {
                   }
 
 #skill_content {
-                overflow: auto;
+                margin: 0 auto;
+                display: inline-block;
                 }
 
 .skill_block {
               display: inline-block;
               text-align: center;
-              margin: 40px 40px 90px 40px;
+              margin: 40px 0px 90px 0px;
               padding: 30px;
               text-align: center;
               height: 100%;
               vertical-align: top;
+              width: 300px;
+              max-width: 300px;
               }
 
 .skill_block ul {
@@ -266,5 +272,4 @@ ul {
             margin-bottom: 30px;
             padding: 10px;
             font-weight: 500;
-            border-radius: 6px;
             }
